# axum-book-store

./: Cargo.toml  README.md
src/: app.rs  configs.rs  lib.rs  main.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  types.rs
src/book/: handlers.rs  mod.rs  types.rs
src/common/: error.rs  macros.rs  mod.rs
tests/: test_user_handlers.rs
tests/utils/: mod.rs
