[package]
name = "axumbookstore"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
http = "1.1.0"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.3"
validator = { version = "0.18.1", features = ["derive"] }
jsonwebtoken = "9.3.0"
thiserror = "1.0.58"
serde_json = "1.0.115"
axum-extra = "0.9.3"
chrono = "0.4.37"
uuid = { version = "1.8.0", features = ["v4"] }
tower-http = "0.5.2"
tower = "0.4.13"

[dev-dependencies]
anyhow = "1.0.82"